# minml

./: .gitignore  CMakeLists.txt  todo_list.md
launcher/: minml.cpp
scripts/: build_all.sh  build_lib.py  build_math_libs.py  cpu_builder.py  cuda_builder.py  tmp_script.sh  utils.py  windows_build_all.bat  windows_cuda_build.bat
src/backend/: CMakeLists.txt  cuda_dummy_backend.cpp  opencl_dummy_backend.cpp
src/backend/cpu/: CMakeLists.txt  ComputeConfig.cpp  ComputeConfig.hpp  assembly_macros.hpp  attention.cpp  avx_misc_kernels.cpp  batchnorm.cpp  common_math.hpp  conv.cpp  conv_im2row.cpp  cpu_context.cpp  cpu_event.cpp  cpu_memory.cpp  cpu_properties.cpp  cpu_x86.cpp  cpu_x86.hpp  def_misc_kernels.cpp  dispatcher.cpp  fp16.cpp  fp16.hpp  gemms.cpp  indexers.hpp  kernel_definitions.hpp  misc.cpp  misc_kernels.hpp  normalization.cpp  openblas_gemm.cpp  training.cpp  utils.cpp  utils.hpp
src/backend/cpu/gemm/: CMakeLists.txt  Fragment.hpp  Matrix.hpp  avx2_gemm_kernels.cpp  avx2_kernels.cpp  avx512_gemm_kernels.cpp  avx512f_gemm_kernels.cpp  avx512f_kernels.cpp  avx_gemm_kernels.cpp  avx_kernels.cpp  common_operations.hpp  def_gemm_kernel.cpp  def_gemm_kernels.cpp  def_kernels.cpp  fused_conv_block_runtime.cpp  fused_conv_block_runtime.hpp  gemm.cpp  gemm_kernels.hpp  gemm_runtime.cpp  gemm_runtime.hpp  mha_runtime.cpp  mha_runtime.hpp  sse2_gemm_kernels.cpp  sse2_kernels.cpp  utilities.hpp
src/backend/cpu/helpers/: accumulators.hpp  indexers.hpp  lines_and_tiles.hpp  tensor_wrappers.hpp  tiles.hpp
src/backend/cpu/kernels/: CMakeLists.txt  TensorFragment.hpp  activations.cpp  activations.hpp  add_bias_act.cpp  avx2_kernels.cpp  avx_kernels.cpp  conv_explicit_gemm.cpp  conv_implicit_gemm.cpp  conv_winograd_fused.cpp  conv_winograd_non_fused.cpp  conv_winograd_nonfused.cpp  conversion.cpp  def_kernels.cpp  global_pooling.cpp  kernel_definitions.ipp  kernels.hpp  pooling_and_scaling.cpp  pooling_runtime.cpp  pooling_runtime.hpp  sse2_kernels.cpp  winograd_transforms.hpp
src/backend/cpu/kernels/gemm/: CMakeLists.txt  Fragment.hpp  Matrix.hpp  avx2_gemm_kernels.cpp  avx_gemm_kernels.cpp  def_gemm_kernel.cpp  gemm.cpp  gemm_kernels.hpp  gemm_traits.hpp  sse2_gemm_kernels.cpp
src/backend/cpu/tiles/: Tile.hpp  tile_transpose.hpp
src/backend/cpu/unused/: bf16_vector.hpp  fp16_vector.hpp  fp32_vector.hpp  vector_conversion.hpp  vector_length.hpp  vector_load_store.hpp
src/backend/cpu/vectors/: bf16_vector.hpp  fp16_vector.hpp  fp32_scalar.hpp  fp32_vector.hpp  fp32_xmm.hpp  fp32_ymm.hpp  fp32_zmm.hpp  generic_vector.hpp  register_type.hpp  type_conversions.hpp  types.hpp  vector_constants.hpp  vector_conversion.hpp  vector_functions.hpp  vector_length.hpp  vector_load.hpp  vector_load_store.hpp  vector_macros.hpp  vector_masks.hpp  vector_store.hpp  vector_utils.hpp  vectors.hpp
src/backend/cpu/winograd/: CMakeLists.txt  avx2_winograd_kernels.cpp  avx512_winograd_kernels.cpp  avx512f_winograd_kernels.cpp  avx_winograd_kernels.cpp  common_operations.hpp  def_winograd_kernels.cpp  sse2_winograd_kernels.cpp  winograd_kernels.hpp  winograd_runtime.cpp  winograd_runtime.hpp
src/backend/cuda/: CMakeLists.txt  attention.cu  cuda_context.cpp  cuda_event.cpp  cuda_memory.cu  cuda_properties.cpp  cudnn_conv.cpp  cudnn_math.cpp  gemms.cpp  misc.cpp  old_winograd.cu  utils.cpp  utils.hpp
src/backend/cuda/helpers/: AvgVarStats.cuh  accumulators.cuh  indexers.cuh  lines_and_tiles.cuh  misc.cuh  tensor_wrappers.cuh
src/backend/cuda/kernels/: activations.cu  activations.cuh  attention.cu  batchnorm.cu  conversion.cu  depthwise_conv.cu  gemm.cu  global_pooling.cu  group_conv.cu  implicit_gemm_conv.cu  layernorm.cu  learnable_scaling.cu  moe.cu  normalization.cu  pooling.cu  quantized.cu  rmsnorm.cu  softmax.cu  tensor_op.cu  training.cu  winograd_fused.cu  winograd_nonfused.cu  winograd_transforms.cuh
src/backend/cuda/kernels/gemm/: predicate_vector.cuh
src/backend/cuda/vec/: convert.cuh  generic_vec.cuh  utils.cuh  vec1d.cuh  vec1f.cuh  vec1h.cuh  vec2f.cuh  vec2h.cuh  vec4f.cuh  vec4h.cuh  vec8h.cuh  vec_headers.cuh  vector_load.cuh  vector_math.cuh  vector_store.cuh
src/backend/cuda/vectors/: bf16_vector.cuh  fp16_vector.cuh  fp32_vector.cuh  generic_vector.cuh  vectors.cuh
src/backend/opencl/: CMakeLists.txt  activations.cpp  attention.cpp  batchnorm.cpp  conversion.cpp  depthwise_conv.cpp  gemms.cpp  global_pooling.cpp  kernel_table.cpp  kernel_table.hpp  normalization.cpp  opencl_context.cpp  opencl_event.cpp  opencl_memory.cpp  opencl_properties.cpp  training.cpp  utils.cpp  utils.hpp  winograd_nonfused.cpp
src/backend/opencl/kernels/: activations_backward.opencl  activations_forward.opencl  add_bias_act.opencl  batchnorm.opencl  common.opencl  conversion.opencl  depthwise_conv.opencl  global_pooling.opencl  indexers.opencl  lines_and_tiles.opencl  reductions.opencl  training.opencl  winograd_nonfused.opencl
src/core/: CMakeLists.txt  Context.cpp  DataType.cpp  Device.cpp  Event.cpp  Shape.cpp  Tensor.cpp  math.cpp  ml_exceptions.cpp  ml_memory.cpp
src/graph/: CMakeLists.txt  CalibrationTable.cpp  Graph.cpp  GraphNode.cpp  Histogram.cpp  graph_optimizers.cpp  swa_utils.cpp
src/layers/: AbsolutePositionalEncoding.cpp  Add.cpp  AveragePooling.cpp  BatchNormalization.cpp  CMakeLists.txt  ChannelAveragePooling.cpp  ChannelScaling.cpp  ChannelShuffle.cpp  Conv2D.cpp  Dense.cpp  DepthToSpace.cpp  DepthwiseConv2D.cpp  FusedConvBlock.cpp  GatherTokens.cpp  GatherTopK.cpp  Gelu.cpp  GlobalAveragePooling.cpp  GlobalBroadcastHW.cpp  GlobalPooling.cpp  Identity.cpp  Input.cpp  (+24 more)
test/: CMakeLists.txt  test_launcher.cpp
test/backend/: test_attention.cpp  test_batchnorm.cpp  test_conv2D.cpp  test_convert.cpp  test_depthwise_conv2D.cpp  test_gemm_conv.cpp  test_gemms.cpp  test_global_pooling.cpp  test_moe.cpp  test_nonlinearity.cpp  test_normalization.cpp  test_quantization.cpp  test_tensor_op.cpp  test_training.cpp  test_winograd.cpp
test/core/: test_Shape.cpp  test_Tensor.cpp
test/utils/: test_json.cpp  test_serialization.cpp  test_string_util.cpp  test_time_util.cpp
(+107 files in other folders)
